Fixing scroll on mobile

--- a/giffy/src/Estilos/App.css
+++ b/giffy/src/Estilos/App.css
@@ -422,7 +422,7 @@ main {
   grid-column: 2/3;
   grid-row: 2/4;
   max-height: 91vh;
-  overflow: auto;
+  overflow-y: scroll;
   text-overflow: ellipsis;
 }
 article {
@@ -636,7 +636,7 @@ li a {
   main {
     grid-column: 1/3;
     grid-row: 2/3;
-    overflow: hidden;
+    overflow: auto;
     text-overflow: ellipsis;
   }
   footer {
